# jmcomic-test

./: README.md  pyproject.toml  requirements.txt
src/: jmcomic_client.py  main.py
tests/: test_main.py
