[tool]
name = "jmcomic-downloader"
version = "0.1.0"
description = "A simple tool to download albums using the jmcomic library."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"
jmcomic = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.scripts]
jmcomic-downloader = "src.main:main"